generator client {
  provider = "prisma-client-js"
  binaryTargets = ["native", "linux-musl"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  USER
  ADMIN
}

enum GameType {
  CHESS
  CHECKERS
  DURAK
  ALIAS
  MAFIA
}

enum RoomStatus {
  WAITING
  PLAYING
  FINISHED
}

model User {
  id            String         @id @default(cuid())
  username      String         @unique
  email         String         @unique
  passwordHash  String
  avatarUrl     String?
  bio           String?
  stats         Json?
  role          Role           @default(USER)
  tokenVersion  Int            @default(0)
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  ownedRooms    Room[]         @relation("RoomHost")
  memberships   RoomMember[]
  refreshTokens RefreshToken[]
  wonSessions   GameSession[]  @relation("SessionWinner")
}

model Room {
  id         String        @id @default(cuid())
  name       String
  gameType   GameType
  status     RoomStatus    @default(WAITING)
  maxPlayers Int
  isPublic   Boolean       @default(true)
  inviteCode String        @unique
  hostId     String
  host       User          @relation("RoomHost", fields: [hostId], references: [id], onDelete: Cascade)
  members    RoomMember[]
  sessions   GameSession[]
  createdAt  DateTime      @default(now())
  updatedAt  DateTime      @updatedAt

  @@index([status, isPublic])
  @@index([hostId])
}

model RoomMember {
  id             String    @id @default(cuid())
  roomId         String
  userId         String
  ready          Boolean   @default(false)
  joinedAt       DateTime  @default(now())
  disconnectedAt DateTime?
  room           Room      @relation(fields: [roomId], references: [id], onDelete: Cascade)
  user           User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([roomId, userId])
  @@index([roomId])
  @@index([userId])
}

model GameSession {
  id        String    @id @default(cuid())
  roomId    String
  room      Room      @relation(fields: [roomId], references: [id], onDelete: Cascade)
  startedAt DateTime  @default(now())
  endedAt   DateTime?
  winnerId  String?
  winner    User?     @relation("SessionWinner", fields: [winnerId], references: [id], onDelete: SetNull)
  log       Json?

  @@index([roomId])
  @@index([winnerId])
}

model RefreshToken {
  id         String    @id @default(cuid())
  userId     String
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash  String    @unique
  expiresAt  DateTime
  revokedAt  DateTime?
  userAgent  String?
  ipAddress  String?
  createdAt  DateTime  @default(now())

  @@index([userId, expiresAt])
}
